# redshells

./: .gitignore  .travis.yml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: format.yml  test.yml
examples/: binary_classification_example.py  factorization_machine_example.py  graph_convolutional_matrix_completion_example.py  matrix_factorization_example.py  scdv_examples.py  word_item_similarity_example.py
examples/config/: example.ini  logging.ini
redshells/: __init__.py
redshells/app/: __init__.py
redshells/data/: __init__.py  data_frame_utils.py  find_keyword_by_matching.py  load_data_of_task.py  load_existing_file.py
redshells/factory/: __init__.py  optuna_param_factory.py  prediction_model_factory.py
redshells/model/: __init__.py  early_stopping.py  factorization_machine.py  feature_aggregation_similarity_model.py  gcmc_dataset.py  graph_convolutional_matrix_completion.py  lda_model.py  matrix_factorization.py  matrix_factorization_model.py  multiresolution_gan.py  scdv.py  tdidf.py  tfidf.py  utils.py  (+1 more)
sandbox/: sandbox.py  test_dataset.py
test/: calculate_word_embedding_test.py  calculate_word_item_similarity_test.py  classification_model_test.py  data_frame_utils_test.py  factorization_machine_test.py  find_item_keyword_by_matching_test.py  find_keyword_by_matching_test.py  graph_convolutional_matrix_completion_test.py  make_similarity_data_test.py  matrix_factorization_test.py  pairwise_similarity_model_test.py  prediction_model_factory_test.py  scdv_test.py  test_scdv.py  train_fasttext_test.py
(+68 files in other folders)
